--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-    <script type="module" crossorigin src="/index-0A3N-Nb5.js"></script>
-    <link rel="stylesheet" crossorigin href="/index-DG2Rqdbo.css" />
+    <script type="module" crossorigin src="index-0A3N-Nb5.js"></script>
+    <link rel="stylesheet" crossorigin href="index-DG2Rqdbo.css" />
     <script src="app.js"></script>
   </head>
   <body>
